# ScribbleBug

./: .gitignore  README.md  db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py  views.py
scribblebug/: apps.py  gemini.py  models.py  score_utils.py  scribble_utils.py  tasks.py
scribblebug/migrations/: 0001_initial.py  0002_alter_scribble_spider_alter_score_spider_and_more.py
scribblebug/static/scribblebug/: styles.css
scribblebug/templates/: base.html  index.html  new_scribble.html  play.html
