[project]
name = "spid-it"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.5",
    "django>=5.2.7",
    "google-genai>=1.41.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "social-auth-app-django>=5.5.1",
]
